回報按鈕的樣式改成現代一點，切換頁面延遲一點避免material wave 特效根換頁面同時間很lag

--- a/templates/drink_menu/caculate.html
+++ b/templates/drink_menu/caculate.html
@@ -5,10 +5,10 @@
         </div>
         <div class="center">統計資訊</div>
     </ons-toolbar>
-    <div class="notify info">
+    <div class="notify-info">
         <span>飲品項目、價格以實際店家為準</span>
         <span>如果你發現項目價格有所不同，可以點選左邊的紙飛機回報給我們知道。</span>
-        <i ng-click="gotoReport()" class="ion-paper-airplane"></i>
+        <i ng-click="gotoReport()" class="ion-ios-paperplane waves-light"></i>
     </div>
     <ons-list modifier="inset" >
         <ons-list-item class="drink-item" modifier="tappable" ng-repeat="(name,option) in selection">
