--- a/styles/app.scss
+++ b/styles/app.scss
@@ -3,28 +3,29 @@
     background-repeat: no-repeat;
     background-position: center;
 }
+
 input,
 textarea,
 [contenteditable] {
     -webkit-user-select: text;
     user-select: text;
 }
-
 /*hack for onsen checkbox input*/
 
 .checkbox > input[type="checkbox"] {
     visibility: hidden;
 }
+
 .noti_all {
     font-size: 14px;
     margin: 10px;
 }
+
 .noti_all_red {
     font-size: 14px;
     margin: 10px;
     color: #e2613c;
 }
-
 /*登入頁面*/
 
 .login-card {
@@ -59,6 +60,7 @@ textarea,
             border: 1px solid #d9d9d9;
             border-top: 1px solid #c0c0c0;
             /* border-radius: 2px; */
+            
             padding: 0 8px;
             box-sizing: border-box;
             -moz-box-sizing: border-box;
@@ -133,49 +135,49 @@ textarea,
         }
     }
 }
-
 /*登入頁面*/
-
-
 /*註冊頁面*/
 
 .form-row {
     margin: 4px;
 }
+
 .width-full {
     width: 100%;
 }
+
 .lucent {
     opacity: 0.4;
 }
+
 .note {
     margin: 12px 8px;
     font-size: 13px;
 }
+
 .vspc {
     margin-top: 20px;
 }
+
 .formarea {
     width: 90%;
     margin: 50px auto 0px auto;
 }
+
 .signup_note {
     color: #e2613c;
 }
-
 /*註冊頁面*/
-
-
 /*附近搜巡頁面*/
 
 .near_map {
     width: 100%;
     height: 240px;
 }
+
 .near_item_active {
     background-color: #ddd;
 }
-
 /*
 .near_button {
     position: fixed;
@@ -191,19 +193,23 @@ textarea,
     font-size: 14px;
     padding: 15px 0px 15px 15px;
 }
+
 .list-item-left {
     width: 60px;
     margin-right: -60px;
     float: left;
 }
+
 .list-item-right {
     width: 100%;
     float: right;
 }
+
 .list-item-content {
     margin-left: 50px;
     margin-right: 30px;
 }
+
 .avator {
     width: 40px;
     height: 40px;
@@ -211,37 +217,40 @@ textarea,
     box-shadow: 0px 0px 7px -2px rgba(0, 0, 0, 0.75);
     background-color: rgba(0, 0, 0, .3);
 }
+
 .name {
     font-weight: 500;
     line-height: 16px;
     font-size: 15px;
     margin-bottom: 6px;
 }
+
 .desc {
     line-height: 16px;
 }
-
 /*附近搜巡頁面*/
-
-
 /*飲料店的頁面*/
 
 .store-button-bar.store-button-bar {
     width: 90%;
     margin: 10px 0 10px 5%;
 }
+
 .store-carousel {
     width: 100%;
     height: 500px;
 }
+
 .timeline {
     margin-top: 10px;
     margin-bottom: 10px;
 }
+
 .timeline-li {
     line-height: 1;
     padding: 10px;
 }
+
 .timeline-image {
     width: 40px;
     height: 40px;
@@ -251,37 +260,40 @@ textarea,
     background-repeat: no-repeat;
     border: none
 }
+
 .timeline-date {
     float: right;
     font-size: 12px;
     opacity: 0.35;
 }
+
 .timeline-from {
     margin: 10px 0 6px 0;
 }
+
 .timline-from p {
     margin: 7px 0px 0px 0px;
     font-size: 10px;
     color: #e26444;
 }
+
 .timeline-name {
     font-size: 15px;
     font-weight: 500;
 }
+
 .timeline-id {
     font-size: 14px;
     opacity: 0.4;
 }
+
 .timeline-message {
     margin-top: 4px;
     font-size: 14px;
     opacity: 0.8;
     line-height: 1.15;
 }
-
 /*飲料店的頁面*/
-
-
 /*飲料店評論*/
 
 .to-wrapper {
@@ -289,6 +301,7 @@ textarea,
     height: 62px;
     padding: 10px;
 }
+
 .to-image {
     width: 42px;
     height: 42px;
@@ -296,33 +309,36 @@ textarea,
     -webkit-border-radius: 4px;
     background-color: #ccc;
 }
+
 .to-name {
     font-weight: 500;
     font-size: 17px;
     margin-bottom: 4px;
 }
+
 .to-email {
     font-size: 14px;
     opacity: 0.4;
 }
+
 .text-input {
     margin-top: 4px;
 }
+
 .textarea {
     margin-top: 4px;
 }
-
 /*飲料店評論*/
-
-
 /*設定頁面*/
 
 .profile-wrapper {
     padding: 16px 10px 0 10px;
 }
+
 .profile-image-wrapper {
     width: 60px;
 }
+
 .profile-image {
     width: 50px;
     height: 50px;
@@ -330,32 +346,34 @@ textarea,
     -webkit-border-radius: 4px;
     border: inset 1px rgba(0, 0, 0, 0.3);
 }
+
 .profile-name {
     font-size: 18px;
     padding: 4px 0 2px 0;
 }
+
 .profile-des {
     font-size: 15px;
     opacity: 0.4;
 }
-
 /*設定頁面*/
-
-
 /*飲料的 dialog*/
 
 .drink_menu_dialog {
     height: 370px;
 }
+
 .drink_menu_dialog .content {
     width: 100%;
     padding: 10px;
     box-sizing: border-box;
 }
+
 .drink_menu_dialog .content .button-bar {
     width: 100%;
     margin-bottom: 15px;
 }
+
 .list-item-action {
     position: absolute;
     right: 10px;
@@ -363,7 +381,9 @@ textarea,
     font-size: 20px;
     opacity: 0.3;
 }
+
 .list-item-action > ons-icon {}
+
 .list-item-deleteicon {
     position: absolute;
     left: 0px;
@@ -373,25 +393,24 @@ textarea,
     text-align: center;
     height: 44px;
 }
+
 .list-item-note {
     position: absolute;
     right: 56px;
     top: 0px;
     font-size: 14px;
 }
+
 .list__item.list__item--inset.note {
     padding-left: 44px;
     font-size: 14px;
     opacity: .7;
     margin: 0 8px;
 }
-
 /*飲料的 dialog*/
-
-
 /*notification*/
 
-.notify {
+.notify-info {
     position: relative;
     width: 90%;
     font-weight: 300;
@@ -401,44 +420,39 @@ textarea,
     -webkit-border-radius: 4px;
     border-radius: 4px;
     height: 42px;
+    span {
+        display: block;
+        margin-left: 50px;
+        font-size: 12px;
+        margin-bottom: 4px;
+        line-height: 13px;
+        color: #aaa;
+        &:nth-child(1) {
+            font-size: 14px;
+            color: #333;
+        }
+    }
+    i {
+        position: absolute;
+        left: 0px;
+        /* top: 0px; */
+        
+        bottom: -3px;
+        width: 40px;
+        height: 40px;
+        font-size: 33px;
+        line-height: 44px;
+        text-align: center;
+        /* line-height: 50px; */
+        
+        vertical-align: middle;
+        background: #84b9f9;
+        color: white;
+        border-radius: 50%;
+        /* text-shadow: 0px 1px 1px #fdfeff; */
+    }
 }
-.notify span {
-    display: block;
-    margin-left: 50px;
-    font-size: 12px;
-    margin-bottom: 4px;
-    line-height: 13px;
-}
-.notify span:nth-child(1) {
-    font-weight: 700;
-    font-size: 14px;
-}
-.notify i {
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    width: 40px;
-    height: 50px;
-    font-size: 32px;
-    text-align: center;
-    line-height: 50px;
-    vertical-align: middle;
-}
-.info {
-    color: #004d7e;
-    border: 1px solid #318eff;
-    background: -moz-linear-gradient(top, #cae2ff, #97c6ff);
-    background: linear-gradient(to bottom, #cae2ff, #97c6ff);
-}
-.info i {
-    background: #84b9f9;
-    color: #003d65;
-    text-shadow: 0px 1px 1px #fdfeff;
-}
-
 /*notification*/
-
-
 /*edit profile*/
 
 .eprofile-card {
@@ -451,6 +465,7 @@ textarea,
     text-shadow: rgba(0, 0, 0, 0.4) 0px 1px 0px;
     position: relative;
 }
+
 .eprofile-image {
     height: 100px;
     width: 100px;
@@ -463,9 +478,11 @@ textarea,
     margin: 0 auto;
     transition: .2s all;
 }
+
 .eprofile-image.loading {
     margin: 40px auto;
 }
+
 .eprofile-image.loading:after {
     content: '';
     background: trasparent;
@@ -480,6 +497,7 @@ textarea,
     animation: rotate 2s infinite linear;
     -webkit-animation: rotate 2s infinite linear;
 }
+
 @keyframes rotate {
     0% {
         transform: rotateZ(0deg);
@@ -488,6 +506,7 @@ textarea,
         transform: rotateZ(360deg);
     }
 }
+
 @-webkit-keyframes rotate {
     0% {
         -webkit-transform: rotateZ(0deg);
@@ -496,11 +515,13 @@ textarea,
         -webkit-transform: rotateZ(360deg);
     }
 }
+
 .eprofile-label-avatar {
     display: block;
     width: 100%;
     height: 100%;
 }
+
 .eprofile-label-background {
     position: absolute;
     top: 0px;
@@ -509,9 +530,11 @@ textarea,
     width: 50px;
     height: 50px;
 }
+
 .background-icon {
     margin-top: 10px;
 }
+
 .eprofile-file {
     position: absolute;
     left: 0;
@@ -523,27 +546,36 @@ textarea,
     height: 100%;
     visibility: hidden;
 }
+
 .eprofile-shadow {
     background: -moz-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.65) 100%);
     /* FF3.6+ */
+    
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0, 0, 0, 0)), color-stop(100%, rgba(0, 0, 0, 0.65)));
     /* Chrome,Safari4+ */
+    
     background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.65) 100%);
     /* Chrome10+,Safari5.1+ */
+    
     background: -o-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.65) 100%);
     /* Opera 11.10+ */
+    
     background: -ms-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.65) 100%);
     /* IE10+ */
+    
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.65) 100%);
     /* W3C */
+    
     //    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000', GradientType=0);
     /* IE6-9 */
+    
     position: absolute;
     width: 100%;
     height: 100px;
     left: 0;
     bottom: 0;
 }
+
 .eprofile-name {
     margin: 20px 0 10px 0;
     font-weight: 600;
@@ -552,6 +584,7 @@ textarea,
     position: relative;
     z-index: 5;
 }
+
 .eprofile-id {
     margin: 0 0 5px 0;
     font-size: 14px;
@@ -559,6 +592,7 @@ textarea,
     position: relative;
     z-index: 6;
 }
+
 .eprofile-desc {
     font-size: 15px;
     opacity: 0.6;
@@ -566,22 +600,24 @@ textarea,
     text-align: center;
     margin: 0 auto;
 }
+
 .info-col {
     height: 60px;
     line-height: 1;
     padding: 12px 0 12px 4px;
 }
+
 .info-num {
     font-size: 16px;
     font-weight: 500;
     opacity: 0.8;
 }
+
 .info-unit {
     margin-top: 6px;
     font-size: 14px;
     opacity: 0.4;
 }
-
 /*edit profile*/
 
 //推薦的星星
@@ -605,6 +641,7 @@ textarea,
         color: #666;
     }
 }
+
 .reportsuccess {
     text-align: center;
     padding-top: 30px;
@@ -621,6 +658,7 @@ textarea,
         font-size: 14px;
     }
 }
+
 .near_page {
     .card {
         height: 100%;
@@ -634,7 +672,7 @@ textarea,
                 top: 5px;
                 left: 5px;
                 z-index: 1;
-                button{
+                button {
                     padding: 0 10px;
                 }
             }
@@ -656,7 +694,8 @@ textarea,
             padding: 20px 48px 20px 84px;
             border-radius: 0 0 2px 2px;
             position: relative;
-            >.avatar {
+            height: 120px;
+            .avatar {
                 position: absolute;
                 border-radius: 50%;
                 height: 64px;
@@ -666,19 +705,19 @@ textarea,
                 top: calc(50% - 32px);
                 @include backgroundCover();
             }
-            >.card-title {
+            .card-title {
                 font-size: 24px;
                 line-height: 30px;
                 margin: 0px;
                 letter-spacing: 1px;
                 font-weight: 900;
             }
-            >p {
+            p {
                 margin: 0;
                 line-height: 18px;
                 font-size: 18px;
             }
-            >i {
+            i {
                 display: -webkit-box;
                 display: -webkit-flex;
                 display: -moz-box;
@@ -705,7 +744,7 @@ textarea,
                 background-color: #fff;
                 top: 0px;
                 position: absolute;
-                box-shadow: 1px 2px 3px #aaa;
+                box-shadow: 1px 2px 3px #eee;
             }
             .ons-scroller {
                 padding-top: 120px;
@@ -749,10 +788,12 @@ textarea,
         }
     }
 }
+
 .caculate_item {
     font-size: 14px;
     font-weight: 600;
 }
+
 .caculate_info {
     font-size: 12px;
     color: #777;
