--- a/templates/drink_menu/drinkmenu.html
+++ b/templates/drink_menu/drinkmenu.html
@@ -9,10 +9,10 @@
         </div>
     </ons-toolbar>
 
-    <div class="notify info">
+    <div class="notify-info">
         <span>飲品項目、價格以實際店家為準</span>
         <span>如果你發現項目價格有所不同，可以點選左邊的紙飛機回報給我們知道。</span>
-        <i ng-click="gotoReport()" class="ion-paper-airplane"></i>
+        <i ng-click="gotoReport()" class="ion-ios-paperplane waves-light waves-effect"></i>
     </div>
 
     <ons-list modifier="inset" ng-repeat="type in  menu.list">
