修改一下 card-avatar 在埃奉上面亂跑 因為哀鳳在scroll的時候position fixed不聽話 修正一個attribute的問題，要記住attribute 一律都要用小寫

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -757,7 +757,7 @@ textarea,
                 .card-avatar {
                     padding: 28px 48px 28px 84px;
                     width: 100%;
-                    position: fixed;
+//旭:iphone不會把element好好的fixed在上面會壞掉，所以拿掉fixed   position: fixed;
                     top: 0px;
                     display: block;
                     background-color: #fff;
