--- a/templates/near/near.html
+++ b/templates/near/near.html
@@ -23,7 +23,8 @@
             </div>
             <div id="googlemap" class="near_map"></div>
         </div>
-        <div class="card-footer" ng-click="toggleCard()" swiper-Card open="card_open">
+        
+        <div class="card-footer" ng-click="toggleCard()" swiper-card open="card_open">
             <div class="card-avatar waves-effect waves-block">
                 <div class="avatar" rn-lazy-background="shopAvatar(nowShop.company_id)"></div>
                 <span class="title" ng-bind="nowShop.name || '選擇附近的飲料店'"></span>
