修正rating 0顆星星會壞掉 修理一下comment 的 css 樣是

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -7,7 +7,10 @@ $gray60:#757575;
 $gray70:#616161;
 $gray80:#424242;
 $gray90:#212121;
-$cubic:cubic-bezier(0.4, 0, 0.2, 1);
+$cubic:cubic-bezier(0.4,
+0,
+0.2,
+1);
 @mixin transition($transition...) {
     -webkit-transition: $transition;
     -moz-transition: $transition;
@@ -15,6 +18,7 @@ $cubic:cubic-bezier(0.4, 0, 0.2, 1);
     -ms-transform: $transition;
     transition: $transition;
 }
+
 @mixin transform($transform...) {
     -moz-transform: $transform;
     -o-transform: $transform;
@@ -22,6 +26,7 @@ $cubic:cubic-bezier(0.4, 0, 0.2, 1);
     -ms-transform: $transform;
     transform: $transform;
 }
+
 @mixin animation($animation...) {
     -moz-animation: $animation;
     -o-animation: $animation;
@@ -29,6 +34,7 @@ $cubic:cubic-bezier(0.4, 0, 0.2, 1);
     -ms-animation: $animation;
     animation: $animation;
 }
+
 @mixin filter($filter...) {
     -moz-filter: $filter;
     -o-filter: $filter;
@@ -36,43 +42,41 @@ $cubic:cubic-bezier(0.4, 0, 0.2, 1);
     -ms-filter: $filter;
     filter: $filter;
 }
+
 @mixin backgroundCover() {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
 }
+
 @mixin backgroundContain() {
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
 }
-@mixin backgroundCover() {
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-}
+
 input,
 textarea,
 [contenteditable] {
     -webkit-user-select: text;
     user-select: text;
 }
-
 /*hack for onsen checkbox input*/
 
 .checkbox > input[type="checkbox"] {
     visibility: hidden;
 }
+
 .noti_all {
     font-size: 14px;
     margin: 10px;
 }
+
 .noti_all_red {
     font-size: 14px;
     margin: 10px;
     color: #e2613c;
 }
-
 /*登入頁面*/
 
 .login-card {
@@ -107,6 +111,7 @@ textarea,
             border: 1px solid #d9d9d9;
             border-top: 1px solid #c0c0c0;
             /* border-radius: 2px; */
+            
             padding: 0 8px;
             box-sizing: border-box;
             -moz-box-sizing: border-box;
@@ -181,49 +186,49 @@ textarea,
         }
     }
 }
-
 /*登入頁面*/
-
-
 /*註冊頁面*/
 
 .form-row {
     margin: 4px;
 }
+
 .width-full {
     width: 100%;
 }
+
 .lucent {
     opacity: 0.4;
 }
+
 .note {
     margin: 12px 8px;
     font-size: 13px;
 }
+
 .vspc {
     margin-top: 20px;
 }
+
 .formarea {
     width: 90%;
     margin: 50px auto 0px auto;
 }
+
 .signup_note {
     color: #e2613c;
 }
-
 /*註冊頁面*/
-
-
 /*附近搜巡頁面*/
 
 .near_map {
     width: 100%;
     height: 240px;
 }
+
 .near_item_active {
     background-color: #ddd;
 }
-
 /*
 .near_button {
     position: fixed;
@@ -239,19 +244,23 @@ textarea,
     font-size: 14px;
     padding: 15px 0px 15px 15px;
 }
+
 .list-item-left {
     width: 60px;
     margin-right: -60px;
     float: left;
 }
+
 .list-item-right {
     width: 100%;
     float: right;
 }
+
 .list-item-content {
     margin-left: 50px;
     margin-right: 30px;
 }
+
 .avator {
     width: 40px;
     height: 40px;
@@ -259,77 +268,94 @@ textarea,
     box-shadow: 0px 0px 7px -2px rgba(0, 0, 0, 0.75);
     background-color: rgba(0, 0, 0, .3);
 }
+
 .name {
     font-weight: 500;
     line-height: 16px;
     font-size: 15px;
     margin-bottom: 6px;
 }
+
 .desc {
     line-height: 16px;
 }
-
 /*附近搜巡頁面*/
-
-
 /*飲料店的頁面*/
 
 .store-button-bar.store-button-bar {
     width: 90%;
     margin: 10px 0 10px 5%;
 }
+
 .store-carousel {
     width: 100%;
     height: 500px;
 }
-.timeline {
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-.timeline-li {
-    line-height: 1;
-    padding: 10px;
-}
-.timeline-image {
-    width: 40px;
-    height: 40px;
-    border-radius: 4px;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    border: none
-}
-.timeline-date {
-    float: right;
-    font-size: 12px;
-    opacity: 0.35;
-}
-.timeline-from {
-    margin: 10px 0 6px 0;
-}
-.timline-from p {
-    margin: 7px 0px 0px 0px;
-    font-size: 10px;
-    color: #e26444;
-}
-.timeline-name {
-    font-size: 15px;
-    font-weight: 500;
-}
-.timeline-id {
-    font-size: 14px;
-    opacity: 0.4;
-}
-.timeline-message {
-    margin-top: 4px;
-    font-size: 14px;
-    opacity: 0.8;
-    line-height: 1.15;
-}
-
 /*飲料店的頁面*/
+/*飲料店的頁面下方評論*/
 
-
+.comment_card {
+    padding: 5px 0;
+    margin: 10px 0;
+    min-height: 80px;
+    .comment_card_layout_left {
+        width: 70px;
+        float: left;
+        height: 70px;
+        overflow: hidden;
+        .comment_avatar {
+            width: 50px;
+            height: 50px;
+            background-position: center;
+            background-size: cover;
+            border-radius: 40px;
+            /* text-align: center; */
+            
+            margin: 0 auto;
+        }
+        .comment_name {
+            height: 20px;
+            line-height: 20px;
+            text-align: center;
+            font-size: 14px;
+        }
+    }
+    .comment_card_layout_right {
+        position: relative;
+        .comment_message {
+            line-height: 18px;
+            font-size: 14px;
+            color: #777;
+            word-wrap: break-word;
+            white-space: pre-wrap;
+            text-overflow: ellipsis;
+            padding-left: 70px;
+            box-sizing: border-box;
+            padding-top: 25px;
+        }
+        star-rating {
+            position: absolute;
+            top: 0;
+            left: 70px;
+            line-height: 0;
+            ul {
+                height: 20px;
+                line-height: 20px;
+                font-size: 10px;
+            }
+        }
+        .comment_time {
+            position: absolute;
+            top: 0px;
+            right: 0;
+            font-size: 10px;
+            color: #aaa;
+            line-height: 20px;
+            height: 20px;
+        }
+    }
+}
+/*飲料店的頁面下方評論*/
 /*飲料店評論*/
 
 .to-wrapper {
@@ -337,6 +363,7 @@ textarea,
     height: 62px;
     padding: 10px;
 }
+
 .to-image {
     width: 42px;
     height: 42px;
@@ -344,33 +371,36 @@ textarea,
     -webkit-border-radius: 4px;
     background-color: #ccc;
 }
+
 .to-name {
     font-weight: 500;
     font-size: 17px;
     margin-bottom: 4px;
 }
+
 .to-email {
     font-size: 14px;
     opacity: 0.4;
 }
+
 .text-input {
     margin-top: 4px;
 }
+
 .textarea {
     margin-top: 4px;
 }
-
 /*飲料店評論*/
-
-
 /*設定頁面*/
 
 .profile-wrapper {
     padding: 16px 10px 0 10px;
 }
+
 .profile-image-wrapper {
     width: 60px;
 }
+
 .profile-image {
     width: 50px;
     height: 50px;
@@ -378,32 +408,34 @@ textarea,
     -webkit-border-radius: 4px;
     border: inset 1px rgba(0, 0, 0, 0.3);
 }
+
 .profile-name {
     font-size: 18px;
     padding: 4px 0 2px 0;
 }
+
 .profile-des {
     font-size: 15px;
     opacity: 0.4;
 }
-
 /*設定頁面*/
-
-
 /*飲料的 dialog*/
 
 .drink_menu_dialog {
     height: 370px;
 }
+
 .drink_menu_dialog .content {
     width: 100%;
     padding: 10px;
     box-sizing: border-box;
 }
+
 .drink_menu_dialog .content .button-bar {
     width: 100%;
     margin-bottom: 15px;
 }
+
 .list-item-action {
     position: absolute;
     right: 10px;
@@ -411,7 +443,9 @@ textarea,
     font-size: 20px;
     opacity: 0.3;
 }
+
 .list-item-action > ons-icon {}
+
 .list-item-deleteicon {
     position: absolute;
     left: 0px;
@@ -421,22 +455,21 @@ textarea,
     text-align: center;
     height: 44px;
 }
+
 .list-item-note {
     position: absolute;
     right: 56px;
     top: 0px;
     font-size: 14px;
 }
+
 .list__item.list__item--inset.note {
     padding-left: 44px;
     font-size: 14px;
     opacity: .7;
     margin: 0 8px;
 }
-
 /*飲料的 dialog*/
-
-
 /*notification*/
 
 .notify-info {
@@ -465,6 +498,7 @@ textarea,
         position: absolute;
         left: 0px;
         /* top: 0px; */
+        
         bottom: -3px;
         width: 40px;
         height: 40px;
@@ -472,6 +506,7 @@ textarea,
         line-height: 44px;
         text-align: center;
         /* line-height: 50px; */
+        
         vertical-align: middle;
         background: #84b9f9;
         color: white;
@@ -479,10 +514,7 @@ textarea,
         /* text-shadow: 0px 1px 1px #fdfeff; */
     }
 }
-
 /*notification*/
-
-
 /*edit profile*/
 
 .eprofile-card {
@@ -495,6 +527,7 @@ textarea,
     text-shadow: rgba(0, 0, 0, 0.4) 0px 1px 0px;
     position: relative;
 }
+
 .eprofile-image {
     height: 100px;
     width: 100px;
@@ -507,9 +540,11 @@ textarea,
     margin: 0 auto;
     transition: .2s all;
 }
+
 .eprofile-image.loading {
     margin: 40px auto;
 }
+
 .eprofile-image.loading:after {
     content: '';
     background: trasparent;
@@ -524,6 +559,7 @@ textarea,
     animation: rotate 2s infinite linear;
     -webkit-animation: rotate 2s infinite linear;
 }
+
 @keyframes rotate {
     0% {
         transform: rotateZ(0deg);
@@ -532,6 +568,7 @@ textarea,
         transform: rotateZ(360deg);
     }
 }
+
 @-webkit-keyframes rotate {
     0% {
         -webkit-transform: rotateZ(0deg);
@@ -540,11 +577,13 @@ textarea,
         -webkit-transform: rotateZ(360deg);
     }
 }
+
 .eprofile-label-avatar {
     display: block;
     width: 100%;
     height: 100%;
 }
+
 .eprofile-label-background {
     position: absolute;
     top: 0px;
@@ -553,9 +592,11 @@ textarea,
     width: 50px;
     height: 50px;
 }
+
 .background-icon {
     margin-top: 10px;
 }
+
 .eprofile-file {
     position: absolute;
     left: 0;
@@ -567,27 +608,36 @@ textarea,
     height: 100%;
     visibility: hidden;
 }
+
 .eprofile-shadow {
     background: -moz-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.65) 100%);
     /* FF3.6+ */
+    
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0, 0, 0, 0)), color-stop(100%, rgba(0, 0, 0, 0.65)));
     /* Chrome,Safari4+ */
+    
     background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.65) 100%);
     /* Chrome10+,Safari5.1+ */
+    
     background: -o-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.65) 100%);
     /* Opera 11.10+ */
+    
     background: -ms-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.65) 100%);
     /* IE10+ */
+    
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.65) 100%);
     /* W3C */
+    
     //    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000', GradientType=0);
     /* IE6-9 */
+    
     position: absolute;
     width: 100%;
     height: 100px;
     left: 0;
     bottom: 0;
 }
+
 .eprofile-name {
     margin: 20px 0 10px 0;
     font-weight: 600;
@@ -596,6 +646,7 @@ textarea,
     position: relative;
     z-index: 5;
 }
+
 .eprofile-id {
     margin: 0 0 5px 0;
     font-size: 14px;
@@ -603,6 +654,7 @@ textarea,
     position: relative;
     z-index: 6;
 }
+
 .eprofile-desc {
     font-size: 15px;
     opacity: 0.6;
@@ -610,22 +662,24 @@ textarea,
     text-align: center;
     margin: 0 auto;
 }
+
 .info-col {
     height: 60px;
     line-height: 1;
     padding: 12px 0 12px 4px;
 }
+
 .info-num {
     font-size: 16px;
     font-weight: 500;
     opacity: 0.8;
 }
+
 .info-unit {
     margin-top: 6px;
     font-size: 14px;
     opacity: 0.4;
 }
-
 /*edit profile*/
 
 //推薦的星星
@@ -649,6 +703,7 @@ textarea,
         color: #666;
     }
 }
+
 .reportsuccess {
     text-align: center;
     padding-top: 30px;
@@ -665,6 +720,7 @@ textarea,
         font-size: 14px;
     }
 }
+
 .near_page {
     .card {
         height: 100%;
@@ -757,7 +813,7 @@ textarea,
                 .card-avatar {
                     padding: 28px 48px 28px 84px;
                     width: 100%;
-//旭:iphone不會把element好好的fixed在上面會壞掉，所以拿掉fixed   position: fixed;
+                    //旭:iphone不會把element好好的fixed在上面會壞掉，所以拿掉fixed   position: fixed;
                     top: 0px;
                     display: block;
                     background-color: #fff;
@@ -801,10 +857,12 @@ textarea,
         }
     }
 }
+
 .caculate_item {
     font-size: 14px;
     font-weight: 600;
 }
+
 .caculate_info {
     font-size: 12px;
     color: #777;
